Tayler--working on sql connection issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
-spring.datasource.username=petrax
-spring.datasource.password=Liftoff123
+
+# Environmental variables
+spring.security.user.name=petrax
+spring.security.user.password=Liftoff123
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
