--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
 
 # Environmental variables
-spring.security.user.name=petrax
-spring.security.user.password=Liftoff123
+spring.datasource.username=${username}
+spring.datasource.password=${password}
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
