--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
-spring.datasource.username=petrax
-spring.datasource.password=Liftoff123
+spring.datasource.username=${username}
+spring.datasource.password=${password}
+
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
