--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
 
 # Environmental variables
-spring.datasource.username=${username}
-spring.datasource.password=${password}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
