--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
-
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 
@@ -8,7 +7,7 @@ spring.datasource.password=${PASSWORD}
 spring.jpa.database = MYSQL
 
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
