--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
 
 spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
+spring.datasource.password=YES
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
