--- a/petrax-frontend/angular.json
+++ b/petrax-frontend/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2681dc0e-6f39-45c3-b038-2bb7eec3144a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
