--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+/.idea/shelf/Uncommitted_changes_before_Update_at_7_25_2023_8_10_PM_[Changes]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Checkout_at_7_25_2023_8_26_PM__Changes_.xml
+/.idea/shelf/Uncommitted_changes_before_Update_at_7_25_2023_8_10_PM__Changes_.xml
