--- a/petrax-frontend/package.json
+++ b/petrax-frontend/package.json
@@ -18,16 +18,24 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@fullcalendar/angular": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/angular": "^5.11.5",
+    "@fullcalendar/common": "^5.11.5",
+    "@fullcalendar/core": "^5.11.5",
+    "@fullcalendar/daygrid": "^5.11.5",
+    "@fullcalendar/interaction": "^5.11.5",
+    "glob-parent": "^6.0.2",
+    "loader-utils": "^3.2.1",
+    "minimatch": "^9.0.3",
+    "node-forge": "^1.3.1",
     "rxjs": "~6.6.0",
+    "semver": "^7.5.4",
     "tslib": "^2.3.0",
+    "webpack": "^5.88.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.6",
-    "@angular/cli": "^16.1.6",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
