installed dependencies for bootstrap styling

--- a/petrax-frontend/package.json
+++ b/petrax-frontend/package.json
@@ -23,6 +23,9 @@
     "@fullcalendar/core": "^5.11.5",
     "@fullcalendar/daygrid": "^5.11.5",
     "@fullcalendar/interaction": "^5.11.5",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.0",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "glob-parent": "^6.0.2",
     "loader-utils": "^3.2.1",
     "minimatch": "^9.0.3",
