--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
 
-spring.datasource.username=${USERNAME}
-spring.datasource.password=YES
+spring.datasource.username=petrax
+spring.datasource.password=LiftOff123
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
