--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
-
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
+
+#Enable CORS
+spring.mvc.dispatch-options-request=true
+
+#Static resources location
+spring.resources.static/locations=classpath:/META-INF/resources/,classpath:/resources,classpath:/static/,classpath:/public/,file:/org.petrax/dist/
+
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
