--- a/petrax-frontend/angular.json
+++ b/petrax-frontend/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "src/styles.css",
               "node_modules/@fullcalendar/common/main.css",
-              "node_modules/@fullcalendar/daygrid/main.css"
+              "node_modules/@fullcalendar/daygrid/main.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
