--- a/petrax-frontend/package.json
+++ b/petrax-frontend/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/interaction": "^5.11.5",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.10.5",
     "glob-parent": "^6.0.2",
     "loader-utils": "^3.2.1",
     "minimatch": "^9.0.3",
