Front and back of calendar are connected!!! WOOT WOOT!!! I moved a couple of things into the calendar folder as well for cohesion. I added a new WebConfig.Java (which is best practices naming). I did not delete the WebConfiguration.java because I didn't want to break any code. Doesn't post to the fullcalendar, but works otherwise.

--- a/petrax-frontend/angular.json
+++ b/petrax-frontend/angular.json
@@ -30,14 +30,11 @@
               "src/assets"
             ],
             "styles": [
-
-
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "node_modules/@fullcalendar/common/main.css",
               "node_modules/@fullcalendar/daygrid/main.css",
-
               "src/styles.css"
             ],
             "scripts": [
@@ -79,6 +76,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "petrax-frontend:build",
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "petrax-frontend:build:production"
