--- a/petrax-frontend/package.json
+++ b/petrax-frontend/package.json
@@ -41,6 +41,7 @@
     "@angular-devkit/build-angular": "^12.2.18",
     "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
