Updated controllers to handle relationships in the database. Added Sessions. Tried a bunch of stuff to get the sessions working. I THINK they might be working, but still not getting user info sent to landing page and pets are not being added because UserId cannot be found. I feel close...yet so far away! Obviously lots of changes!

--- a/petrax-frontend/package.json
+++ b/petrax-frontend/package.json
@@ -24,6 +24,7 @@
     "@fullcalendar/daygrid": "^5.11.5",
     "@fullcalendar/interaction": "^5.11.5",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@types/glob": "^8.1.0",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.10.5",
     "glob-parent": "^6.0.2",
