--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# Session Storage
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
 
