--- a/petrax-frontend/package.json
+++ b/petrax-frontend/package.json
@@ -23,6 +23,7 @@
     "@fullcalendar/core": "^5.11.5",
     "@fullcalendar/daygrid": "^5.11.5",
     "@fullcalendar/interaction": "^5.11.5",
+    "@fullcalendar/rrule": "^5.11.5",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.10.5",
