Whoops-- developed on main. Fixed update-professional.component.ts, added async.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/petrax?serverTimezone=UTC
 
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
+spring.datasource.username=petrax
+spring.datasource.password=petrax123!
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
